# ambi

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  README.md  package-lock.json  package.json  setup.sh  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml  python-ci.yml
.husky/: pre-push
ambi-os/: package-lock.json  package.json
apps/api-gateway/: package.json  sample.env  tsconfig.json
apps/web/: .eslintrc.js  App.test.tsx  App.tsx  jest.config.js  jest.setup.js  package.json
backend/: .env.example  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  setup.sh
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/src/: index.ts  tracer.ts
demo_assets/: voice_demo_transcript.md
docs/: README.md  architecture.md  implementation-plan.md  phase1-implementation.md  prd-new.md  prd.md
docs/api/: README.md
docs/database/: README.md  environment-variables.md
docs/memory-system/: README.md
frontend/: .gitignore  App.tsx  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.web.json  webpack.config.js
python_backend/: .env.example  README.md  pyproject.toml
python_backend/ambi/clients/: claude_client.py  elevenlabs_client.py
python_backend/ambi/db/: mongodb.py  pinecone.py  redis.py
python_backend/ambi/services/: memory_manager.py  pinecone_memory_service.py  redis_memory_service.py  voice_service.py
python_backend/tests/db/: test_mongodb.py  test_redis.py
python_backend/tests/services/: test_memory_manager.py
(+80 files in other folders)
